[package]
name = "container-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "container_runtime_lib"

[[bin]]
name = "container_runtime"
path = "src/main.rs"

[dependencies]
libc = "0.2.169"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
